# backend-api/docs/swagger.yaml
@@ -1,174 +1,391 @@
-swagger: "2.0"
+swagger: '2.0'
 info:
-  title: Rostercontrol
-  version: 1.0.0
-  description: Vali oma lemmik töötaja
+    title: Rostercontrol
+    version: 1.0.0
+    description: Vali oma lemmik töötaja
 paths:
-  /worker:
-    get:
-      tags:
-        - Worker
-      responses:
-        "200":
-          description: Returns a list of Workers
-          schema:
-            type: array
-            items:
-              type: string
-          examples:
-            application/json:
-              - Maria
-              - Sharia
-              - Daria
-      summary: Get all the <workers> in API
-      description: Return all Workers that are registered in API
-    post:
-      tags:
-        - Worker
-      parameters:
-        - name: body
-          description: The <Worker> that is to be created.
-          schema:
-            $ref: "#/definitions/new-Worker"
-          in: body
-          required: true
-      responses:
-        "201":
-          description: Send 201 when <Worker> is successfully added to the database
-          schema:
-            $ref: "#/definitions/new-Worker"
-          examples:
-            application/json:
-              FirstName: NewFirstName
-              LastName: NewLastName
-              Workload: NewWorkload
-              IsActive: NewIsActive
-        "400":
-          description: "Missing some parameter, please review your request data"
-          schema:
-            $ref: "#/definitions/error"
-      summary: Create a new <Worker> into the app
-      description: "Creates a new <Worker> instance with its required details, for further usage."
-  "/worker/{WorkerID}":
-    get:
-      tags:
-        - Worker
-      responses:
-        "200": {}
-        "404":
-          schema:
-            $ref: "#/definitions/error"
-      operationId: WorkerID
-      summary: Get the full details of a Worker
-      description: Will return all details of a given <Worker> based on WorkerID given.
-    put:
-      tags:
-        - Worker
-      parameters:
-        - name: body
-          description: Contains new data to be changed in the specified Worker
-          schema:
-            $ref: "#/definitions/new-Worker"
-          in: body
-          required: true
-      responses:
-        "201":
-          description: |
-            Returns 201 upon successful modification of Worker
-          schema:
-            $ref: "#/definitions/new-Worker"
-          examples:
-            application/json:
-              - FirstName: ""
-                LastName: ""
-                Workload: ""
-                IsActive: ""
-        "400":
-          description: Returns 400 when one or multiple required parmeters are missing
-          schema:
-            $ref: "#/definitions/error"
-          examples:
-            application/json:
-              - error: "cannot change info, because some parameter missing."
-        "404":
-          description: "Returns 404 when Worker that is to be modified, is not found by the given WorkerID"
-          schema:
-            $ref: "#/definitions/error"
-          examples:
-            application/json:
-              - error: Worker not found
-    delete:
-      tags:
-        - Worker
-      parameters:
-        - name: body
-          description: ID of <Worker> to be removed from the app
-          schema:
-            $ref: "#/definitions/delete-Worker"
-          in: body
-          required: true
-      responses:
-        "204":
-          description: Returns  "No content" when removal of <Worker> is sucess
-          schema:
-            $ref: "#/definitions/error"
-          examples:
-            application/json:
-              - error: No Content
-        "404":
-          description: "Returns error, when <Worker> with specified ID does not exist"
-          schema:
-            $ref: "#/definitions/error"
-          examples:
-            application/json:
-              - error: ID not found
-      summary: Delete a <Worker> from the app
-      description: Deletes an entry from the app
-    parameters:
-      - name: WorkerID
-        description: ID of Worker
-        in: path
-        required: true
-        type: string
+    /worker:
+        get:
+            tags:
+                - Worker
+            responses:
+                '200':
+                    description: Returns a list of Workers
+                    schema:
+                        type: array
+                        items:
+                            type: string
+                    examples:
+                        application/json:
+                            - Maria
+                            - Sharia
+                            - Daria
+            summary: Get all the <workers> in API
+            description: Return all Workers that are registered in API
+        post:
+            tags:
+                - Worker
+            parameters:
+                -
+                    name: body
+                    description: The <Worker> that is to be created.
+                    schema:
+                        $ref: '#/definitions/new-Worker'
+                    in: body
+                    required: true
+            responses:
+                '201':
+                    description: Send 201 when <Worker> is successfully added to the database
+                    schema:
+                        $ref: '#/definitions/new-Worker'
+                    examples:
+                        application/json:
+                            FirstName: NewFirstName
+                            LastName: NewLastName
+                            Workload: NewWorkload
+                            IsActive: NewIsActive
+                '400':
+                    description: 'Missing some parameter, please review your request data'
+                    schema:
+                        $ref: '#/definitions/error'
+            summary: Create a new <Worker> into the app
+            description: 'Creates a new <Worker> instance with its required details, for further usage.'
+    '/worker/{WorkerID}':
+        get:
+            tags:
+                - Worker
+            responses:
+                '200': {}
+                '404':
+                    schema:
+                        $ref: '#/definitions/error'
+            operationId: WorkerID
+            summary: Get the full details of a Worker
+            description: Will return all details of a given <Worker> based on WorkerID given.
+        put:
+            tags:
+                - Worker
+            parameters:
+                -
+                    name: body
+                    description: Contains new data to be changed in the specified Worker
+                    schema:
+                        $ref: '#/definitions/new-Worker'
+                    in: body
+                    required: true
+            responses:
+                '201':
+                    description: |
+                        Returns 201 upon successful modification of Worker
+                    schema:
+                        $ref: '#/definitions/new-Worker'
+                    examples:
+                        application/json:
+                            -
+                                FirstName: ''
+                                LastName: ''
+                                Workload: ''
+                                IsActive: ''
+                                RoleName: ''
+                '400':
+                    description: Returns 400 when one or multiple required parmeters are missing
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: 'cannot change info, because some parameter missing.'
+                '404':
+                    description: 'Returns 404 when Worker that is to be modified, is not found by the given WorkerID'
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: Worker not found
+        delete:
+            tags:
+                - Worker
+            parameters:
+                -
+                    name: body
+                    description: ID of <Worker> to be removed from the app
+                    schema:
+                        $ref: '#/definitions/delete-Worker'
+                    in: body
+                    required: true
+            responses:
+                '204':
+                    description: Returns  "No content" when removal of <Worker> is sucess
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: No Content
+                '404':
+                    description: 'Returns error, when <Worker> with specified ID does not exist'
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: ID not found
+            summary: Delete a <Worker> from the app
+            description: Deletes an entry from the app
+        parameters:
+            -
+                name: WorkerID
+                description: ID of Worker
+                in: path
+                required: true
+                type: string
+    /shift:
+        get:
+            tags:
+                - Shift
+            responses:
+                '200':
+                    description: Returns a list of Shifts
+                    schema:
+                        type: array
+                        items:
+                            type: string
+                    examples:
+                        application/json:
+                            -
+                                StartTime: ''
+                                EndTime: ''
+                            -
+                                StartTime: ''
+                                EndTime: ''
+            summary: Get all the <shift> in API
+            description: Return all Shifts that are registered in API
+        post:
+            tags:
+                - Shift
+            parameters:
+                -
+                    name: body
+                    description: The <Shift> that is to be created.
+                    schema:
+                        $ref: '#/definitions/new-Shift'
+                    in: body
+                    required: true
+            responses:
+                '201':
+                    description: Send 201 when <Shift> is successfully added to the database
+                    schema:
+                        $ref: '#/definitions/new-Shift'
+                    examples:
+                        application/json:
+                            ShiftDate: '2000-01-31'
+                            StartTime: '10:00:00'
+                            EndTime: '18:00:00'
+                            WorkerWorkerID: 019bb335-3f37-76b2-995f-798e468bf56f
+                            ScheduleScheduleID: 019bb335-3f37-76b2-995f-798e468bf56f
+            summary: Create a new <Shift> into the app
+            description: 'Creates a new <Shift> instance with its required details, for further usage.'
+    '/shift/{ShiftID}':
+        get:
+            parameters:
+                -
+                    name: body
+                    in: body
+            responses:
+                '200': {}
+                '404':
+                    schema:
+                        $ref: '#/definitions/error'
+            summary: Get the full details of a Shift
+            description: Will return all details of a given <Shift> based on ShiftID given.
+        put:
+            tags:
+                - Shift
+            parameters:
+                -
+                    name: body
+                    description: Contains new data to be changed in the specified Worker
+                    schema:
+                        $ref: '#/definitions/new-Shift'
+                    in: body
+                    required: true
+            responses:
+                '201':
+                    description: |
+                        Returns 201 upon successful modification of Shift
+                    schema:
+                        $ref: '#/definitions/new-Shift'
+                    examples:
+                        application/json:
+                            -
+                                ShiftDate: ''
+                                StartTime: ''
+                                EndTime: ''
+                '400':
+                    description: Returns 400 when one or multiple required parmeters are missing
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: 'cannot change info, because some parameter missing.'
+                '404':
+                    description: 'Returns 404 when Shift that is to be modified, is not found by the given ShiftID'
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: Shift not found
+        delete:
+            tags:
+                - Shift
+            responses:
+                '204':
+                    description: Returns  "No content" when removal of <Shift> is sucess
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: No Content
+                '404':
+                    description: 'Returns error, when <Worker> with specified ID does not exist'
+                    schema:
+                        $ref: '#/definitions/error'
+                    examples:
+                        application/json:
+                            -
+                                error: ID not found
+            description: Deletes an entry from the app
+        parameters:
+            -
+                name: ShiftID
+                description: ID of Shift
+                in: path
+                required: true
+                type: string
+    '/schedule/{ScheduleID}': {}
+    /schedule: {}
 definitions:
-  error:
-    title: Root Type for error
-    description: ""
-    type: object
-    properties:
-      error:
-        type: string
-    example:
-      error: Error message
-  delete-Worker:
-    title: Root Type for delete-Worker
-    description: ""
-    type: object
-    properties:
-      WorkerID:
-        type: string
-    example:
-      WorkerID: 5f9b9e90-cec3-11f0-b43f-901b0eec5991
-  new-Worker:
-    title: Root Type for new-Worker
-    description: ""
-    required:
-      - FirstName
-      - LastName
-      - Workload
-      - IsActive
-    type: object
-    properties:
-      FirstName:
-        type: string
-      LastName:
-        type: string
-      Workload:
-        type: string
-      IsActive:
-        type: string
-    example:
-      FirstName: NewFirstName
-      LastName: NewLastName
-      Workload: NewWorkload
-      IsActive: NewIsActive
+    error:
+        title: Root Type for error
+        description: ''
+        type: object
+        properties:
+            error:
+                type: string
+        example:
+            error: Error message
+    delete-Worker:
+        title: Root Type for delete-Worker
+        description: ''
+        type: object
+        properties:
+            WorkerID:
+                type: string
+        example:
+            WorkerID: 5f9b9e90-cec3-11f0-b43f-901b0eec5991
+    new-Worker:
+        title: Root Type for new-Worker
+        description: ''
+        required:
+            - FirstName
+            - LastName
+            - Workload
+            - IsActive
+            - RoleName
+        type: object
+        properties:
+            FirstName:
+                type: string
+            LastName:
+                type: string
+            Workload:
+                type: string
+            IsActive:
+                type: string
+            RoleName:
+                description: ''
+                type: string
+        example:
+            FirstName: NewFirstName
+            LastName: NewLastName
+            Workload: NewWorkload
+            IsActive: NewIsActive
+            RoleName: NewRoleName
+    new-Shift:
+        description: ''
+        required:
+            - ShiftDate
+            - StartTime
+            - EndTime
+            - WorkerWorkerID
+            - ScheduleScheduleID
+        type: object
+        properties:
+            ShiftDate:
+                description: ''
+                type: string
+            StartTime:
+                description: ''
+                type: string
+            EndTime:
+                description: ''
+                type: string
+            WorkerWorkerID:
+                description: ''
+                type: string
+            ScheduleScheduleID:
+                description: ''
+                type: string
+        example:
+            ShiftDate: NewShiftDate
+            StartTime: NewStartTime
+            EndTime: NewEndTime
+            WorkerWorkerID: NewWorkerWorkerID
+            ScheduleScheduleID: NewScheduleScheduleID
+    delete-Shift:
+        description: ''
+        required:
+            - ShiftID
+        type: object
+        properties:
+            ShiftID:
+                description: ''
+                type: string
+        example:
+            ShiftID: 5f9b9e90-cec3-11f0-b43f-901b0eec5991
+    new-Schedule:
+        description: ''
+        required:
+            - ScheduleName
+            - StartDate
+            - EndDate
+        type: object
+        properties:
+            ScheduleName:
+                description: ''
+                type: string
+            StartDate:
+                description: ''
+                type: string
+            EndDate:
+                description: ''
+                type: string
+        example:
+            ScheduleName: NewScheduleName
+            StartDate: NewStartDate
+            EndDate: NewEndDate
+    delete-Schedule:
+        description: ''
+        required:
+            - ScheduleID
+        type: object
+        properties:
+            ScheduleID:
+                description: ''
+                type: string
+        example:
+            ScheduleID: 5f9b9e90-cec3-11f0-b43f-901b0eec5991
